test/typeerrors/ex12.golden
Building file ../test/typeerrors/ex12.act
  Compiling ex12.act for release

ERROR: Error when compiling ex12 module: Type error

Cannot satisfy the following constraint:

  |
2 |    env.exit()
  |    ^^^
The type of env must have an attribute exit with type _() -> _; no such type is known.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

